<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="setting_dialog_black_title">attention</string>
    <string name="max_len_notice">Can enter up to 30 characters</string>
    <string name="leave_live_success">leave live success</string>
    <string name="leave_live_failure">leave live failure</string>
    <string name="enter_live_success">enter live success</string>
    <string name="enter_live_failure">enter live failure</string>
    <string name="can_not_speak">can not speak</string>
    <string name="barrage_open">open barrage</string>
    <string name="barrage_close">close barrage</string>
    <string name="follow_success">Followed successfully</string>
    <string name="follow_failed">Couldn\\\'t follow</string>
    <string name="setting_black_follow_hint">Unblock to follow</string>
    <string name="please_login">login first</string>
    <string name="go_to_login">login</string>
    <string name="live_traffic_tip">Use mobile data to watch live streams?</string>
    <string name="live_traffic_positive">Continue</string>
    <string name="live_traffic_negative">Exit</string>
    <string name="token_live_error_toast_room_not_exist">The room doesn\'t exist</string>
    <string name="live_finish">Live stream session ended</string>
    <string name="barrage_frequency_control">Send the next comment later</string>
    <string name="barrage_not_control">Allow</string>
    <string name="barrage_control_in_second">Once within %d s</string>
    <string name="barrage_control_in_min">Once within %d min</string>
    <string name="barrage_frequency_control_tips">The host set a frequency limit of sending comments</string>
    <string name="barrage_not_repeat">You\'re forbidden to send duplicated comments</string>
    <string name="barrage_frequency_control_remove_tips">The host lifted the frequency limit of sending comments</string>
    <string name="barrage_not_repeat_remove">You\'re allowed to send duplicated comments</string>
    <string name="ok">OK</string>
    <string name="have_been_kicked">You can\'t enter the room after being kicked out</string>
    <string name="i_know">Got it</string>
    <string name="send_barrage_interval">Send comments in %ds</string>
    <string name="send_barrage_repeated">You\'re forbidden to send duplicated comments</string>
    <string name="message_open_system_browser">Open URL in browser?</string>
    <string name="open_link_forbidden_tips">Couldn\'t open:\n%s\n\n. Try to open in Browser</string>
    <string name="open_in_system_browser">Open in browser </string>
    <string name="open_link_failed">This site may contain security risks</string>
    <string name="invalid_url">This URL doesn\'t exist anymore</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="count_download">%d downloaded</string>
    <string name="ten_thousand_download">%d0 thousand downloaded</string>
    <string name="download">download</string>
    <string name="downloading">start downloading</string>
    <string name="on_air">Live</string>
    <string name="rankTitle">Coins rank</string>
    <string name="empty_tips">Empty</string>
    <string name="refreshing">Just a sec\u2026</string>
    <plurals name="contribute_ticket_num">
        <item quantity="one">Give %1$s coin</item>
        <item quantity="other">Give %1$s coins</item>
    </plurals>
    <string name="ticket_num">coins</string>
    <string name="btn_share">Share with</string>
    <string name="weixin_friend">WeChat</string>
    <string name="moment">Moments</string>
    <string name="QQ">QQ</string>
    <string name="qzone">Qzone</string>
    <string name="blog">Weibo</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="miliao">Mi Talk</string>
    <string name="miliao_feeds">Newsfeed</string>
    <string name="feeds">My feed</string>
    <string name="uninstall_share_tips">Install %1$s first</string>
    <string name="can_not_enter_room_use_myself">Use another Mi Live ID to enter your room</string>
    <string name="service_token_expired">Your account was used at %s. If it was you, you can ignore this message</string>
    <string name="forbbiden_message">Your account (%s) was banned. Contact Mi Live for more information.</string>
    <string name="install">install</string>
    <string name="open">open</string>
    <string name="write_comment">Add comment</string>
    <plurals name="feeds_fans_count_formatter" formatted="false">
        <item quantity="one">%d fan</item>
        <item quantity="other">%d fans</item>
    </plurals>
    <plurals name="live_end_viewer_cnt">
        <item quantity="one">%d viewer</item>
        <item quantity="other">%d viewers</item>
    </plurals>
    <string name="feeds_detail_label_comment" formatted="false">Comments (%s)</string>
    <string name="feeds_detail_label_replay">Replay(%s)</string>
    <string name="feeds_detail_label_detail">Details</string>
    <string name="recomment_text">\@\u0020</string>
    <string name="feeds_hot_comment" formatted="false">Top comments</string>
    <string name="feeds_hot_all" formatted="false">All comments</string>
    <string name="feeds_comment_no_more">No more comments</string>
    <string name="commend_failed">Couldn\'t add comments</string>
    <string name="sixin_message_item_content_menu_copy_success">Copied successfully</string>
    <string name="feeds_comment_delete_dialog_title">Delete the comment?</string>
    <string name="feeds_comment_delete_failed">Couldn\'t remove comments</string>
    <string name="open_same_video_hint">Replaying…</string>
    <string name="live_lottery_no_comment_toast">No comments yet</string>
    <string name="michannel_type_live">Live</string>
    <string name="ten_thousand">0K</string>
    <string name="thousand">k</string>
    <string name="million">M</string>
    <plurals name="channel_view_count">
        <item quantity="one"> %s viewer</item>
        <item quantity="other"> %s viewers</item>
    </plurals>
    <plurals name="channel_viewer_count">
        <item quantity="one">%s viewer</item>
        <item quantity="other">%s viewers</item>
    </plurals>
    <string name="ticket_watermark">Tickets</string>
    <string name="michannel_forecast">Preview</string>
    <string name="michannel_notice">Book</string>
    <string name="michannel_default_title">More games</string>
    <string name="anchor_rank">Daily popular hosts</string>
    <string name="read_count">Viewed %1$d times</string>
    <string name="michannel_fans_cnt">Fan: %s</string>
    <string name="fold_view_show_all">Show all</string>
    <string name="pack_up">Collapse</string>
    <string name="channel_shop_cnt">%d people want to buy</string>
    <string name="install_mi_video">Install Mi video first</string>
    <string name="all_people">All</string>
    <string name="game_guide_close_tip">close after %d s</string>
    <string name="follow_normal_tip">Follow the hosts to view their latest updates</string>
    <string name="live_location_unknown">Unknown planet</string>
    <string name="live_end_time_words">Thank you for watching my live stream!</string>
    <string name="mi_live_accounts">Mi Live ID</string>
    <string name="live_end_replay_hint">Thanks for watching! Come back soon!</string>
    <string name="live_end_time_hours">%sh</string>
    <string name="live_end_time_minute">%sm</string>
    <string name="live_end_time_second">%ss</string>
    <string name="endlive_user_ticket">%1$s coins you gave me are most welcome!</string>
    <string name="endlive_share_user_hint">Thanks for your support!</string>
    <string name="live_end_hint">This live stream has ended.</string>
    <string name="end_live_share">Share with friends</string>
    <string name="money_coming">Red envelope</string>
    <string name="grap_hongbao">Open</string>
    <string name="already_in_pocket">Deposited successfully</string>
    <string name="look_other_money"><![CDATA[View details >]]></string>
    <string name="your_hand_is_too_slow">Better luck next time!</string>
    <string name="anchor_text">Hosts</string>
    <string name="top_50">Top 50</string>
    <string name="red_envelope_best_luck">Winner</string>
    <string name="net_is_busy_tip">Network error, try again later</string>
    <string name="red_result_msg">%s\'s red envelope</string>
    <string name="gold_count">Gold gems: %1$d</string>
    <string name="silver_count">Silver gems: %1$d</string>
    <string name="bottom_tip_send_red">Expired red envelopes will be refunded in 24h</string>
    <string name="money_not_enough_tip">Insufficient funds, top up to send red envelopes. Top up now?</string>
    <string name="create_red_envelop_failed_error">Network error</string>
    <string name="please_select_redpacket">Select amount</string>
    <string name="red_packet_instruction">Instructions&gt;</string>
    <string name="send_redpacket">Send red envelope</string>
    <string name="send_red_btn">Send red envelope</string>
    <string name="buy_diamond">Top-up&gt;</string>
    <plurals name="endlive_next_room_hint">
        <item quantity="one">Switching to the next session in %1$ds…</item>
        <item quantity="other">Switching to the next session in %1$ds…</item>
    </plurals>
    <string name="gender">Gender</string>
    <string name="name">Nickname</string>
    <string name="avatar">Profile photo</string>
    <string name="signature">Status</string>
    <string name="pgc_addr">Location</string>
    <string name="change_info">Edit</string>
    <string name="gender_man">Male</string>
    <string name="gender_woman">Female</string>
    <string name="input_nickname_hint_text">A cool nickname helps other people remember you</string>
    <string name="change_nickname_text">Edit nickname</string>
    <string name="save">Save</string>
    <string name="name_is_empty">Nickname can\'t be blank</string>
    <string name="input_same_nickname">Enter a different nickname</string>
    <string name="nickname_illegal">Nickname can contain up to 20 characters</string>
    <string name="change_name_success">Nickname changed successfully</string>
    <string name="change_failed_include_sensitive">Couldn\'t change nickname. It contains inappropriate language.</string>
    <string name="change_name_failed">Couldn\'t change nickname</string>
    <string name="modify_gender">Select gender</string>
    <string name="change_gender_success">Gender changed successfully</string>
    <string name="change_gender_failed">Couldn\'t change gender</string>
    <string name="signature_input_text">Write your status here</string>
    <string name="change_signature_text">Edit status</string>
    <string name="signature_is_empty">Signature can\'t be blank</string>
    <string name="input_same_signature">Enter a different signature</string>
    <string name="character_text"> characters</string>
    <string name="barrage_normal">Send comments</string>
    <string name="barrage_manage">Manage</string>
    <string name="barrage_horn">Broadcast</string>
    <string name="contest_prepare_rule_title">复活卡规则</string>
    <string name="contest_prepare_rule_1">复活卡可以保你在答错题后而不会淘汰</string>
    <string name="contest_prepare_rule_2">新用户填写你分享的邀请码，双方均可获得一张复活卡</string>
    <string name="contest_prepare_rule_3">每场游戏仅限使用一张复活卡</string>
    <string name="contest_prepare_share">分享</string>
    <string name="contest_late_title">你迟到了</string>
    <string name="contest_late_des">游戏已经开始了，你无法加入本场游戏，但仍然可以围观和评论哦</string>
    <string name="contest_continue">继续观看</string>
    <string name="share_get_revival">获得复活卡</string>
    <string name="withdraw_detail_info">详细信息</string>
    <string name="withdraw_detail_info_1">1.请填写所绑微信号对应的实名信息，将用于微信验证，不匹配将无法兑换成功。</string>
    <string name="withdraw_detail_info_2">2.根据国家相关税务政策规定，我们将使用填写的实名信息，为您代扣缴纳相关税费。</string>
    <string name="withdraw_detail_info_3">3.所填实名信息将严格保密，不作他用。</string>
</resources>