<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/live_horn_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_12">

    <TextView
        android:id="@+id/barrage_select_item_txtBarrage"
        android:layout_width="@dimen/view_dimen_240"
        android:layout_height="@dimen/view_dimen_100"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/barrage_normal"
        android:textColor="@color/ffd267"
        android:textSize="@dimen/text_size_36"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimen_2"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/color_c8c8c8"/>

    <TextView
        android:id="@+id/barrage_select_item_txtManage"
        android:layout_width="@dimen/view_dimen_240"
        android:layout_height="@dimen/view_dimen_100"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/barrage_manage"
        android:textColor="@color/color_b7b7b7"
        android:textSize="@dimen/text_size_36"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimen_2"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/color_c8c8c8"/>

    <TextView
        android:id="@+id/barrage_select_item_txtNotify"
        android:layout_width="@dimen/view_dimen_240"
        android:layout_height="@dimen/view_dimen_100"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/barrage_horn"
        android:textColor="@color/color_b7b7b7"
        android:textSize="@dimen/text_size_36"/>
</LinearLayout>