<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_trans_60"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dip"
        android:layout_centerInParent="true"
        android:layout_marginLeft="33.33dip"
        android:layout_marginRight="33.33dip"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/margin_20"
            android:scaleType="center"
            android:src="@drawable/image_close" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/withdraw_detail_info"
            android:textColor="@color/cash_color"
            android:textSize="@dimen/text_size_52" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/text_color_e5aa1c"
            android:textSize="@dimen/text_size_40"
            android:visibility="gone" />

        <TextView
            android:id="@+id/info_num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="25.33dip"
            android:text="@string/withdraw_detail_info_1"
            android:textColor="@color/color_black_trans_50"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/info_num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="@dimen/margin_50"
            android:text="@string/withdraw_detail_info_2"
            android:textColor="@color/color_black_trans_50"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/info_num3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="@dimen/margin_50"
            android:text="@string/withdraw_detail_info_3"
            android:textColor="@color/color_black_trans_50"
            android:textSize="@dimen/text_size_40" />

    </LinearLayout>

</RelativeLayout>