<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_trans_50"
    android:paddingLeft="@dimen/margin_90"
    android:paddingRight="@dimen/margin_90">

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/corners_bg_white_30px">

        <ImageView
            android:id="@+id/close_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/margin_36"
            android:layout_marginTop="@dimen/margin_36"
            android:src="@drawable/card_answer_icon_close" />

        <TextView
            android:id="@+id/out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_91"
            android:drawableTop="@drawable/youle_live_card_late_picture"
            android:gravity="center"
            android:text="@string/contest_late_title"
            android:textColor="@color/color_black_trans_90"
            android:textSize="@dimen/text_size_56" />

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/out_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_100"
            android:layout_marginRight="@dimen/margin_100"
            android:layout_marginTop="@dimen/margin_36"
            android:gravity="center"
            android:text="@string/contest_late_des"
            android:textColor="@color/color_black_trans_80"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/continue_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_150"
            android:layout_below="@id/desc_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_90"
            android:layout_marginRight="@dimen/margin_90"
            android:layout_marginTop="@dimen/margin_87"
            android:background="@drawable/bg_gradient_purple"
            android:gravity="center"
            android:text="@string/contest_continue"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_45" />

        <TextView
            android:id="@+id/share_success_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/continue_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_102"
            android:layout_marginTop="@dimen/margin_48"
            android:gravity="center"
            android:text="@string/share_get_revival"
            android:textColor="@color/color_6c3ef5"
            android:textSize="@dimen/text_size_48" />
    </RelativeLayout>

</RelativeLayout>