<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/view_container_root"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black_trans_60"/>

    <RelativeLayout
        android:id="@+id/revive_rule_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/view_dimen_60"
        android:layout_marginLeft="@dimen/view_dimen_40"
        android:layout_marginRight="@dimen/view_dimen_40"
        android:background="@drawable/contest_pop_view_bg"
        android:paddingBottom="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/rule_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/contest_prepare_rule_title"
            android:textColor="@color/color_contest_theme"
            android:textSize="@dimen/text_size_48"/>

        <LinearLayout
            android:id="@+id/rule_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rule_title_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/view_dimen_14"
                android:layout_height="@dimen/view_dimen_14"
                android:layout_marginTop="@dimen/view_dimen_20"
                android:background="@drawable/point_7e63ff_s14"/>

            <TextView
                android:id="@+id/rule_one_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_dimen_18"
                android:gravity="left"
                android:text="@string/contest_prepare_rule_1"
                android:textColor="@color/color_black_trans_60"
                android:textSize="@dimen/text_size_40"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rule_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rule_line1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/view_dimen_40"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/view_dimen_14"
                android:layout_height="@dimen/view_dimen_14"
                android:layout_marginTop="@dimen/view_dimen_20"
                android:background="@drawable/point_7e63ff_s14"/>

            <TextView
                android:id="@+id/rule_two_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_dimen_18"
                android:gravity="left"
                android:text="@string/contest_prepare_rule_2"
                android:textColor="@color/color_black_trans_60"
                android:textSize="@dimen/text_size_40"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rule_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rule_line2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/view_dimen_40"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/view_dimen_14"
                android:layout_height="@dimen/view_dimen_14"
                android:layout_marginTop="@dimen/view_dimen_20"
                android:background="@drawable/point_7e63ff_s14"/>

            <TextView
                android:id="@+id/rule_three_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_dimen_18"
                android:gravity="left"
                android:text="@string/contest_prepare_rule_3"
                android:textColor="@color/color_black_trans_60"
                android:textSize="@dimen/text_size_40"/>
        </LinearLayout>

        <TextView
            android:id="@+id/revival_code_tv"
            android:layout_width="@dimen/view_dimen_720"
            android:layout_height="@dimen/view_dimen_140"
            android:layout_below="@id/rule_line3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/contest_border_5e43d5_r70_btn_bg"
            android:gravity="center"
            android:text="--------"
            android:textColor="@color/color_black_pressed_black50"
            android:textSize="@dimen/text_size_60"/>

        <LinearLayout
            android:id="@+id/share_split_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/revival_code_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/view_dimen_60"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/view_dimen_1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/color_black_trans_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_dimen_32"
                android:layout_marginRight="@dimen/view_dimen_32"
                android:gravity="center_horizontal"
                android:text="@string/contest_prepare_share"
                android:textColor="@color/color_black_trans_50"
                android:textSize="@dimen/text_size_36"/>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/view_dimen_1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/color_black_trans_10"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/share_split_area"
            android:layout_marginTop="@dimen/view_dimen_60"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moment_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/prepare_share_moments_bg"
                android:gravity="center_horizontal"
                android:text="@string/moment"
                android:textColor="@color/color_black_trans_50"
                android:textSize="@dimen/text_size_36"/>

            <TextView
                android:id="@+id/wechat_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/prepare_share_wechat_bg"
                android:gravity="center_horizontal"
                android:text="@string/weixin_friend"
                android:textColor="@color/color_black_trans_50"
                android:textSize="@dimen/text_size_36"/>

            <TextView
                android:id="@+id/qq_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/prepare_share_qq_bg"
                android:gravity="center_horizontal"
                android:text="@string/QQ"
                android:textColor="@color/color_black_trans_50"
                android:textSize="@dimen/text_size_36"/>

            <TextView
                android:id="@+id/qzone_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/prepare_share_qzone_bg"
                android:gravity="center_horizontal"
                android:text="@string/qzone"
                android:textColor="@color/color_black_trans_50"
                android:textSize="@dimen/text_size_36"/>
        </LinearLayout>
    </RelativeLayout>
</merge>
