<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fef5dc">

    <TextView
        android:id="@+id/select_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/please_select_redpacket"
        android:textColor="@color/color_black_trans_80"
        android:textSize="@dimen/text_size_42" />

    <LinearLayout
        android:id="@+id/envelope_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_tips"
        android:layout_marginTop="@dimen/view_dimen_25"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/envelope_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/envelope_container1"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/diamond_info_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/envelope_container2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/gold_diamond_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_40"
            android:drawablePadding="@dimen/margin_10"
            android:drawableRight="@drawable/me_golden_diamond"
            android:text="25"
            android:textColor="@color/color_black_trans_80"
            android:textSize="@dimen/text_size_42" />

        <TextView
            android:id="@+id/silver_diamond_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_40"
            android:drawablePadding="@dimen/margin_10"
            android:drawableRight="@drawable/me_argentum_diamond"
            android:text="25"
            android:textColor="@color/color_black_trans_80"
            android:textSize="@dimen/text_size_42" />

        <TextView
            android:id="@+id/recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_diamond"
            android:textColor="@color/color_ff6250"
            android:textSize="@dimen/text_size_42" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimen_112"
        android:layout_alignLeft="@+id/send_btn"
        android:layout_alignRight="@+id/send_btn"
        android:layout_below="@+id/diamond_info_view"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/corn7_black10_bg"
        android:gravity="left|center"
        android:hint="@string/money_coming"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/margin_40"
        android:paddingRight="@dimen/margin_40"
        android:textColor="@color/text_color_black_trans_90"
        android:textColorHint="@color/color_black_trans_40"
        android:textSize="@dimen/text_size_45" />

    <TextView
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_130"
        android:layout_below="@+id/input_view"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"
        android:layout_marginTop="@dimen/margin_60"
        android:background="@drawable/send_redpacket_bg"
        android:gravity="center"
        android:text="@string/send_red_btn"
        android:textColor="@color/color_feefc9"
        android:textSize="@dimen/text_size_45" />

    <TextView
        android:id="@+id/instruction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_dimen_60"
        android:text="@string/red_packet_instruction"
        android:textColor="@color/color_ff6250" />

    <com.base.view.BackTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
